tests/fixtures/errors/bad_param_casing.ksr
// Bad param casing: param must be lower_snake_case
param BadName: Dimensionless = 1.0;
